--- a/My_Stories_for_You/index.qmd
+++ b/My_Stories_for_You/index.qmd
@@ -1,12 +1,88 @@
 # UTS-3 My Stories for You
 
-A story about my oldest daughter [Gaun Pemngantin Gladys](<https://azrl.wordpress.com/2020/07/18/gaun-pengantin-gladys/#comment-28004>)
+---
+title: "Kereta ke Bandung"
+subtitle: "Catatan Perjalanan tentang Kehidupan dan Keheningan"
+format:
+  html:
+    toc: false
+    page-layout: full
+    theme: cosmo
+    mainfont: "Georgia"
+    fontsize: 1.1em
+---
 
-A message to my daughter [The Child Who Learned to Walk at the Disneyland](<https://azrl.wordpress.com/2021/10/06/the-child-who-learned-to-walk-at-the-disneyland/>)
+<style>
+blockquote {
+  font-style: italic;
+  font-size: 1.1em;
+  color: #555;
+  border-left: 4px solid #8b5d3b;
+  padding-left: 1em;
+  margin-left: 0;
+}
+p {
+  text-align: justify;
+  line-height: 1.75;
+}
+h1 {
+  color: #704214;
+  text-align: center;
+  margin-top: 1em;
+}
+</style>
 
-A story for my students [Fly Eagle Fly](<https://azrl.wordpress.com/2008/04/21/fly-my-eagle-fly/>)
+# Kereta ke Bandung
 
-A (true) story for my teachers [Sang Mahaguru, Sang Mahaputera](<https://azrl.wordpress.com/2012/11/28/perginya-sang-mahaputera-dan-mahaguru-berkemeja-putih/)
+Aku naik kereta subsidi dari Solo menuju Bandung —  
+kereta yang tak mengenal sunyi.  
+Suara pedagang memanggil pelanggan bersahut-sahutan  
+dengan tangis bayi yang tak mau tidur.  
+Kursi sempit, udara penuh aroma nasi bungkus,  
+dan tawa yang berdesak-desakan di antara derit roda besi.  
 
-Teasing story
-{{< video https://www.youtube.com/watch?v=Dg_4PbBlBf4 >}}
+Awalnya, aku berpikir perjalanan ini akan melelahkan.  
+Aku sempat berharap punya kursi sendiri  
+tanpa disandari bahu orang lain,  
+atau jendela yang bisa kututup rapat dari angin panas.  
+Tapi di sinilah aku belajar sesuatu yang berbeda:  
+keramaian di gerbong itu bukan sekadar kebisingan —  
+ia adalah bentuk kehidupan yang paling jujur.  
+
+Orang-orang di dalamnya mungkin tak punya banyak,  
+tapi mereka saling berbagi tanpa hitung-hitungan.  
+Seorang ibu menyuapi anak orang lain dengan potongan pisang.  
+Seorang bapak tua berbagi rokok dengan pemuda  
+yang baru dikenalnya lima menit lalu.  
+Dan ketika ada anak kecil terjatuh,  
+dua tangan berbeda — dari dua orang asing —  
+segera mengangkatnya bersamaan.  
+
+Etika?  
+Ah, mungkin tidak ada etika dalam arti “rapi” seperti di buku panduan sopan santun.  
+Orang berbicara keras, makan tanpa basa-basi,  
+bahkan berebut tempat duduk tanpa permisi.  
+Tapi tidak ada yang marah.  
+Semua tertawa, dan dalam tawa itu ada kejujuran yang tak bisa dibeli.  
+
+Aku duduk di antara mereka,  
+mendengarkan cerita tentang rumah yang jauh,  
+tentang kerja yang berat,  
+tentang anak-anak yang masih menunggu di ujung perjalanan.  
+Setiap suara, meski gaduh,  
+terasa seperti lagu rakyat — sumbang tapi tulus.  
+
+Saat malam turun dan gerbong perlahan tenang,  
+aku menatap ke luar jendela:  
+kota demi kota berganti, lampu-lampu kecil berlari di kejauhan.  
+Aku tersadar — mungkin inilah wajah sesungguhnya Indonesia:  
+tidak rapi, tidak hening, tapi hangat.  
+Saling menolong bukan karena punya banyak,  
+melainkan karena tahu rasanya punya sedikit.  
+
+Ketika kereta berhenti di Bandung,  
+aku turun dengan hati yang lebih penuh dari tas yang kubawa.  
+Kereta itu ribut,  
+tapi di dalamnya aku menemukan keheningan yang tidak bisa dijelaskan —  
+keheningan yang lahir dari rasa syukur  
+dan kemanusiaan sederhana.  
